# docs/openapi.yaml
@@ -637,10 +637,50 @@ paths:
                     description: Bad Request
                 '500':
                     description: Internal Server Error
-        put:
+        patch:
             tags:
                 - Permissions
             description: Modify permissions of group
+            parameters:
+                - in: path
+                  name: groupId
+                  schema:
+                      type: string
+                      format: uuid
+                  required: true
+                  description: ID of the group
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: array
+                            items:
+                                type: string
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    id:
+                                        type: string
+                                        format: uuid
+                                    name:
+                                        type: string
+                                    permissions:
+                                        type: array
+                                        items:
+                                            type: string
+                '400':
+                    description: Bad Request
+                '500':
+                    description: Internal Server Error
+        delete:
+            tags:
+                - Permissions
+            description: Delete permissions from group
             parameters:
                 - in: path
                   name: groupId
